<resources>
    <string name="app_name">Brain Training</string>
    <string name="timeLeft">00</string>
    <string name="score">00 / 00</string>
    <string name="message">Let\'s begin!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="initialAns">0</string>
    <string name="initOp">+</string>
    <string name="wrong">Wrong!</string>
    <string name="correct">Correct</string>
</resources>
