<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/timeLeft"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leftNum"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:text="@string/initialAns"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/operator"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rightNum"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/initialAns"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/operator"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/initOp"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/rightNum"
        app:layout_constraintStart_toEndOf="@+id/leftNum"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ansBackground"
                android:onClick="submit"
                android:text="@string/initialAns"
                android:textColor="@color/textColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ansBackground"
                android:onClick="submit"
                android:text="@string/initialAns"
                android:textColor="@color/textColor"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ansBackground"
                android:onClick="submit"
                android:text="@string/initialAns"
                android:textColor="@color/textColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ansBackground"
                android:onClick="submit"
                android:text="@string/initialAns"
                android:textColor="@color/textColor"
                android:textSize="50sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/ansBackground"
        android:onClick="start"
        android:text="@string/start"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/message"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>